--- a/diaries/0614.md
+++ b/diaries/0614.md
@@ -1,28 +1,34 @@
 ## 0615
 
 ### Review
+
+207.
 https://leetcode.com/problems/course-schedule
+[v] use multi source bfs
+[ ] use dfs
+
+210.
 https://leetcode.com/problems/course-schedule-ii
-* use dfs
-* use multi source bfs
+[v] use multi source bfs
+[ ] use dfs
 
 https://leetcode.com/problems/sort-the-matrix-diagonally/
-* use priority queue with custom comparator
-* use diag qsort
+[ ] use priority queue with custom comparator
+[ ] sort pairs
+[ ] use diag qsort
 
 ### New
 
-[?]
 437.
 https://leetcode.com/problems/path-sum-iii/
-* Start DFS from each node O(N^2)
-* Prefix sum O(N)
+[v] Start DFS from each node O(N^2)
+[ ] Prefix sum O(N)
 
-[v]
+167.
 https://leetcode.com/problems/two-sum-ii-input-array-is-sorted/
-* 2 pointers
+[v] 2 pointers
 
-[v]
+653.
 https://leetcode.com/problems/two-sum-iv-input-is-a-bst/
-* flatten tree and use sol of sorted array
-* maintain hashset while traversing the tree in in-order
+[v] flatten tree and use sol of sorted array
+[v] maintain hashset while traversing the tree in in-order
